# Klangbox-ESP32-S2

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
components/ESP32-audioI2S/: CMakeLists.txt
components/ESP32-audioI2S/src/mp3_decoder/: mp3_decoder.cpp
main/: CMakeLists.txt  configuration.h  fileList.cpp  fileList.h  handleWebserver.cpp  handleWebserver.h  html_content.h  klangbox.cpp  languages.h  playSound.cpp  playSound.h
main/ulp/: main.c
partitions/: P12D15.csv
